# OpenGL-Graphics

./: .travis.yml
3D-Scene/: CMakeLists.txt  main.cpp  model.cpp  model.h  opengl_shader.cpp  opengl_shader.h
3D-Scene/assets/: cubemap_shader.fs  cubemap_shader.vs  landscape_shader.fs  model_shader.fs  model_shader.vs  simple_shader.fs  simple_shader.vs  wall_shader.fs  wall_shader.vs  water_shader.fs  water_shader.vs
3D-Scene/assets/boat/: gondol.mtl
3D-Scene/assets/lighthouse/: lighthouse.mtl
Mandelbrot/: .travis.yml  Mandelbrot.sln  README.md  run.cmd
Mandelbrot/Mandelbrot/: Mandelbrot.csproj  MandelbrotForm.Designer.cs  MandelbrotForm.cs  Program.cs  Shader.cs
Mandelbrot/Mandelbrot/Assets/: shader.vert
Teapot/: CMakeLists.txt  README.md  build.bat  main.cpp  model.cpp  model.h  opengl_shader.cpp  opengl_shader.h  run.sh
Teapot/assets/: cubemap_shader.vs  landscape_shader.fs  landscape_shader.vs  model_shader.fs  model_shader.vs  simple_shader.fs  simple_shader.vs  water_shader.fs  water_shader.vs
